
lib_LTLIBRARIES = libs_fwk.la



AM_CPPFLAGS = $(PTHREAD_CFLAGS) 
AM_CFLAGS = -Wall
AM_CXXFLAGS = $(AM_CFLAGS)




libs_fwk_la_SOURCES =  s_async_queue.c  s_list.c  s_loop.c  s_queue.c  s_socket.c  s_thread.c  s_time.c  s_udp.c 
libs_fwk_la_LDFLAGS =   -no-undefined -version-info 1:0:0
libs_fwk_la_CFLAGS = $(AM_CFLAGS) 


